--- a/src/css/immortal.scss
+++ b/src/css/immortal.scss
@@ -390,3 +390,17 @@ table.dataTable {
     border: 1px solid rgb(221, 221, 221);
     overflow: auto;
 }
+
+#mask {
+    position: absolute;
+    display: none;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 9999;
+    cursor: wait;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    text-align: center;
+}
