--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,5 @@
 $images: "./../../assets";
+
 html {
     height: 100%;
 }
@@ -40,6 +41,7 @@ body {
     text-shadow: none;
     padding: 2px;
     overflow: hidden;
+
     /*
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);    
@@ -51,6 +53,7 @@ body {
     position: absolute;
     top: 0px;
     left: 0px;
+
     /*
     position: relative;
     top: 2px;
@@ -253,7 +256,6 @@ body {
     display: none !important;
 }
 
-
 /** status */
 
 #status {
@@ -406,11 +408,9 @@ body {
     box-sizing: border-box;
 }
 
-
 /*end status*/
 
-.find-highlight
-{
+.find-highlight {
     display: inline-block;
     height: 100%;
     pointer-events: none;
