Fix a memory leak in folder upload and issues with max/unmax events

--- a/src/css/immortal.scss
+++ b/src/css/immortal.scss
@@ -424,6 +424,8 @@ table.dataTable {
 #queueInfo {
     white-space: nowrap;
     text-overflow: ellipsis;
-    overflow:hidden;
+    overflow: hidden;
     max-width: 33%;
+    padding-left: 2px;
+    padding-right: 2px;
 }
