Minor code cleanup

--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -4,7 +4,7 @@ $color: "#d4d4d4";
 $panelBackground: "#1e1e1e";
 $panelInsetBackground: "#252526";
 
-#client {
+body {
     background-color: #{$panelBackground};
 }
 
