Fix string parsing and eval systems

--- a/src/css/profiles.scss
+++ b/src/css/profiles.scss
@@ -3,6 +3,7 @@ body {
     overflow: hidden;
     -webkit-user-select: none;
     user-select: none;
+    background: #fff !important;
 }
 
 #toolbar {
