ADd tab sizing and move old files to temp old folder for now til needed

--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -11,7 +11,7 @@ body {
     right: 181px;
     top: 3px;
     bottom: 29px;
-    border: 1px solid #{$borderColor}#{$borderColor};
+    border: 1px solid #{$borderColor};
 }
 
 #display-border {
