--- a/src/css/cm.scss
+++ b/src/css/cm.scss
@@ -1,3 +1,4 @@
+$images: "./../../assets";
 $borderColor: rgb(204, 204, 204);
 $color: #333;
 $tabBackground: rgb(240, 240, 240);
@@ -28,8 +29,6 @@ $tabHeight: 24;
     border-right: 1px solid $borderColor;
     margin-top: 2px;
     height: #{$tabHeight - 2}px;
-    min-width: 40px;
-    max-width: 150px;
     position: relative;
     cursor: pointer;
 }
@@ -48,10 +47,9 @@ $tabHeight: 24;
 }
 
 .cm-tabstrip > div > .title {
-    max-width: 126px;
     margin-left: 22px;
-    margin-top: 2px;
-    margin-right: 2px;
+    margin-top: 3px;
+    margin-right: 20px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -59,18 +57,13 @@ $tabHeight: 24;
     font-size: 11px;
 }
 
-.cm-tabstrip > div.active > .title, .cm-tabstrip > div:hover > .title {
-    max-width: 106px;
-    margin-right: 22px;
-}
-
 .cm-tabstrip > div > .icon {
-    width: 18px;
-    height: 18px;
-    background-color: blue;
-    top: 2px;
-    left: 2px;
+    width: 16px;
+    height: 16px;
+    top: 3px;
+    left: 3px;
     position: absolute;
+    background-size: 16px 16px;
 }
 
 .cm-tabstrip > div > .close {
@@ -79,7 +72,7 @@ $tabHeight: 24;
     position: absolute;
     font-size: 15px;
     font-weight: normal;
-    display: none;
+    display: block;
 }
 
 .cm-tabstrip > div.active > .close, .cm-tabstrip > div:hover > .close {
@@ -145,4 +138,16 @@ $tabHeight: 24;
 .cm-tabstrip.scroll {
     padding-left: 12px;
     padding-right: 12px;
+}
+
+.connected-icon {
+    background-image: url(#{$images}/icons/png/connected2.png);
+}
+
+.connectednonactive-icon {
+    background-image: url(#{$images}/icons/png/connectednonactive2.png);
+}
+
+.disconnected-icon {
+    background-image: url(#{$images}/icons/png/disconnected2.png);
 }
