Fix issues with html dropdown

--- a/src/css/cm.scss
+++ b/src/css/cm.scss
@@ -58,6 +58,7 @@ $tabHeight: 26;
     padding-right: 10px;
     opacity: 0.5;
     cursor: pointer;
+    outline: none;
 }
 
 .cm-tabstrip li:before,
