Add basic input and display control

--- a/src/css/chat.scss
+++ b/src/css/chat.scss
@@ -43,7 +43,7 @@ $panelInsetBackground: "rgb(240, 240, 240)";
     margin-bottom: 0 !important;
 }
 
-#display {
+.display {
     top: 26px;
     bottom: 0;
     left: 0;
