--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,7 +13,7 @@ body {
     line-height: normal !important;
 }
 
-#display-container {
+.display-container {
     position: absolute;
     z-index: 2;
     overflow: hidden;
@@ -27,7 +27,7 @@ body {
     text-shadow: none;
 }
 
-#display {
+.display {
     position: absolute;
     z-index: 2;
     overflow-y: scroll;
@@ -48,7 +48,7 @@ body {
     */
 }
 
-#display-view {
+.display-view {
     z-index: 3;
     position: absolute;
     top: 0px;
@@ -63,7 +63,7 @@ body {
     */
 }
 
-#display-background {
+.display-background {
     top: 0px;
     z-index: 1;
     left: 0px;
@@ -72,7 +72,7 @@ body {
     pointer-events: none;
 }
 
-#display-overlay {
+.display-overlay {
     top: 0px;
     z-index: 2;
     left: 0px;
@@ -81,7 +81,7 @@ body {
     pointer-events: none;
 }
 
-#display-split {
+.display-split {
     position: absolute;
     z-index: 3;
     overflow: hidden;
@@ -104,7 +104,7 @@ body {
     transform: translate3d(0, 0, 0);
 }
 
-#display-split-bar {
+.display-split-bar {
     background-color: menu;
     height: 4px;
     cursor: row-resize;
@@ -116,7 +116,7 @@ body {
     box-sizing: border-box;
 }
 
-#display-split-ghost-bar {
+.display-split-ghost-bar {
     height: 4px;
     right: 12px;
     left: 0;
@@ -128,7 +128,7 @@ body {
     box-sizing: border-box;
 }
 
-#display-split-frame {
+.display-split-frame {
     height: 20%;
     min-height: 150px;
     position: absolute;
@@ -141,7 +141,7 @@ body {
     z-index: 10;
 }
 
-#display-border {
+.display-border {
     position: absolute;
     z-index: 1;
     box-sizing: border-box;
@@ -152,8 +152,8 @@ body {
     clear: both;
 }
 
-#Character,
-#CmdCharacter {
+.character,
+.cmd-character {
     position: absolute;
     visibility: hidden;
     height: auto;
@@ -168,34 +168,34 @@ body {
     line-height: normal;
 }
 
-#command {
+.command {
     position: absolute;
     z-index: 4;
     box-sizing: border-box;
 }
 
-#commandbox {
+.commandbox {
     position: absolute;
     box-sizing: border-box;
 }
 
-#commandleft {
+.commandleft {
     float: left;
     box-sizing: border-box;
 }
 
-#commandright {
+.commandright {
     float: right;
     box-sizing: border-box;
 }
 
-#commandinput {
+.commandinput {
     outline: none;
     resize: none;
     overflow: hidden;
 }
 
-#commandinput:focus {
+.commandinput:focus {
     outline: none;
 }
 
