--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -6,7 +6,7 @@ body {
     background-color:black;
 }
 
-#display {
+.display {
     left: 36px;
     right: 170px;
     top: 2px;
@@ -14,13 +14,13 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#display-border {
+.display-border {
     display: none;
     right: 168px;
 }
 
-#display-split-bar,
-#display-split-ghost-bar {
+.display-split-bar,
+.display-split-ghost-bar {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: #33302b;
@@ -29,7 +29,7 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#command {
+.command {
     height: 24px;
     bottom: 2px;
     left: 36px;
@@ -38,19 +38,19 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#commandbox {
+.commandbox {
     left: 2px;
     right: 20px;
     height: 18px;
     bottom: 2px;
 }
 
-#commandleft,
-#commandright {
+.commandleft,
+.commandright {
     display: none;
 }
 
-#commandinput {
+.commandinput {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -110,7 +110,7 @@ body {
     border: 0px;
 }
 
-#display::-webkit-scrollbar,
+.display::-webkit-scrollbar,
 #bars::-webkit-scrollbar {
     width: 12px;
     height: 12px;
@@ -118,7 +118,7 @@ body {
 
 /* Track */
 
-#display::-webkit-scrollbar-track,
+.display::-webkit-scrollbar-track,
 #bars::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -130,7 +130,7 @@ body {
 
 /* Handle */
 
-#display::-webkit-scrollbar-thumb,
+.display::-webkit-scrollbar-thumb,
 #bars::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
@@ -140,22 +140,22 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#display::-webkit-scrollbar-thumb:hover,
+.display::-webkit-scrollbar-thumb:hover,
 #bars::-webkit-scrollbar-thumb:hover {
     background: #988f7f;
 }
 
-#display::-webkit-scrollbar-thumb:active,
+.display::-webkit-scrollbar-thumb:active,
 #bars::-webkit-scrollbar-thumb:active {
     background: #544f46;
 }
 
-#display::-webkit-scrollbar-thumb:window-inactive,
+.display::-webkit-scrollbar-thumb:window-inactive,
 #bars::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(51, 48, 43, 0.4);
 }
 
-#display::-webkit-scrollbar-corner,
+.display::-webkit-scrollbar-corner,
 #bars::-webkit-scrollbar-corner {
     background-color: black;
 }
