--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -8,7 +8,7 @@ body {
     background-color: #{$panelBackground};
 }
 
-#display {
+.display {
     left: 36px;
     right: 170px;
     top: 2px;
@@ -16,19 +16,19 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#display-border {
+.display-border {
     display: none;
     right: 168px;
 }
 
-#display-split-bar,
-#display-split-ghost-bar {
+.display-split-bar,
+.display-split-ghost-bar {
     border-top: 1px solid #{$borderColor};
     border-bottom: 1px solid #{$borderColor};
     background-color: #{$panelBackground};
 }
 
-#command {
+.command {
     height: 24px;
     bottom: 2px;
     left: 36px;
@@ -37,19 +37,19 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#commandbox {
+.commandbox {
     left: 2px;
     right: 20px;
     height: 18px;
     bottom: 2px;
 }
 
-#commandleft,
-#commandright {
+.commandleft,
+.commandright {
     display: none;
 }
 
-#commandinput {
+.commandinput {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -107,7 +107,7 @@ body {
     border: 0px;
 }
 
-#display::-webkit-scrollbar,
+.display::-webkit-scrollbar,
 #bars::-webkit-scrollbar {
     width: 12px;
     height: 12px;
@@ -115,7 +115,7 @@ body {
 
 /* Track */
 
-#display::-webkit-scrollbar-track,
+.display::-webkit-scrollbar-track,
 #bars::-webkit-scrollbar-track {
     background-color: #{$panelBackground};
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -127,29 +127,29 @@ body {
 
 /* Handle */
 
-#display::-webkit-scrollbar-thumb,
+.display::-webkit-scrollbar-thumb,
 #bars::-webkit-scrollbar-thumb {
     /*border-radius: 10px;*/
     background: #33302b;
     border: 1px solid #{$borderColor};
 }
 
-#display::-webkit-scrollbar-thumb:hover,
+.display::-webkit-scrollbar-thumb:hover,
 #bars::-webkit-scrollbar-thumb:hover {
     background: #807f7e;
 }
 
-#display::-webkit-scrollbar-thumb:active,
+.display::-webkit-scrollbar-thumb:active,
 #bars::-webkit-scrollbar-thumb:active {
     background: #080808;
 }
 
-#display::-webkit-scrollbar-thumb:window-inactive,
+.display::-webkit-scrollbar-thumb:window-inactive,
 #bars::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(51, 48, 43, 0.4);
 }
 
-#display::-webkit-scrollbar-corner,
+.display::-webkit-scrollbar-corner,
 #bars::-webkit-scrollbar-corner {
     background-color: #{$panelBackground};
 
