--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -6,7 +6,7 @@ body {
     background-color:black;
 }
 
-#display {
+.display {
     left: 35px;
     right: 181px;
     top: 3px;
@@ -14,7 +14,7 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#display-border {
+.display-border {
     border-image: url(#{$images}/border.png) 0 0 10 0 repeat;
     border-image-slice: 95 95;
     border-image-repeat: round;
@@ -27,8 +27,8 @@ body {
     border-style: solid;
 }
 
-#display-split-bar,
-#display-split-ghost-bar {
+.display-split-bar,
+.display-split-ghost-bar {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: #33302b;
@@ -37,7 +37,7 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#command {
+.command {
     height: 26px;
     bottom: 0px;
     left: 32px;
@@ -46,26 +46,26 @@ body {
     background-image: url(#{$images}/input.png);
 }
 
-#commandbox {
+.commandbox {
     left: 5px;
     right: 24px;
     height: 18px;
     bottom: 5px;
 }
 
-#commandleft {
+.commandleft {
     background-image: url(#{$images}/input.left.png);
     height: 26px;
     width: 5px;
 }
 
-#commandright {
+.commandright {
     background-image: url(#{$images}/input.right.png);
     height: 26px;
     width: 5px;
 }
 
-#commandinput {
+.commandinput {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -127,7 +127,7 @@ body {
     border: 0px;
 }
 
-#display::-webkit-scrollbar,
+.display::-webkit-scrollbar,
 #bars::-webkit-scrollbar {
     width: 12px;
     height: 12px;
@@ -135,7 +135,7 @@ body {
 
 /* Track */
 
-#display::-webkit-scrollbar-track,
+.display::-webkit-scrollbar-track,
 #bars::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -147,7 +147,7 @@ body {
 
 /* Handle */
 
-#display::-webkit-scrollbar-thumb,
+.display::-webkit-scrollbar-thumb,
 #bars::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
@@ -157,22 +157,22 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#display::-webkit-scrollbar-thumb:hover,
+.display::-webkit-scrollbar-thumb:hover,
 #bars::-webkit-scrollbar-thumb:hover {
     background: #988f7f;
 }
 
-#display::-webkit-scrollbar-thumb:active,
+.display::-webkit-scrollbar-thumb:active,
 #bars::-webkit-scrollbar-thumb:active {
     background: #544f46;
 }
 
-#display::-webkit-scrollbar-thumb:window-inactive,
+.display::-webkit-scrollbar-thumb:window-inactive,
 #bars::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(51, 48, 43, 0.4);
 }
 
-#display::-webkit-scrollbar-corner,
+.display::-webkit-scrollbar-corner,
 #bars::-webkit-scrollbar-corner {
     background-color: black;
 }
