--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -8,7 +8,7 @@ body {
     background-color: #{$panelBackground};
 }
 
-#display {
+.display {
     left: 34px;
     right: 165px;
     top: 2px;
@@ -16,19 +16,19 @@ body {
     border: 1px solid #{$borderColor};
 }
 
-#display-border {
+.display-border {
     display: none;
     right: 168px;
 }
 
-#display-split-bar,
-#display-split-ghost-bar {
+.display-split-bar,
+.display-split-ghost-bar {
     border-top: 1px solid #{$borderColor};
     border-bottom: 1px solid #{$borderColor};
     background-color: #{$panelBackground};
 }
 
-#command {
+.command {
     height: 24px;
     bottom: 2px;
     left: 34px;
@@ -37,7 +37,7 @@ body {
     border: 0px;
 }
 
-#commandbox {
+.commandbox {
     left: 0px;
     top: 0px;
     right: 26px;
@@ -45,12 +45,12 @@ body {
     background-color: white;
 }
 
-#commandleft,
-#commandright {
+.commandleft,
+.commandright {
     display: none;
 }
 
-#commandinput {
+.commandinput {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -60,7 +60,7 @@ body {
     padding: 2px;
 }
 
-#commandinput:focus {
+.commandinput:focus {
     border: 1px solid adadad;
 }
 
@@ -108,7 +108,7 @@ body {
     border: 0px;
 }
 
-#display::-webkit-scrollbar,
+.display::-webkit-scrollbar,
 #bars::-webkit-scrollbar {
     width: 12px;
     height: 12px;
@@ -117,7 +117,7 @@ body {
 
 /* Track */
 
-#display::-webkit-scrollbar-track,
+.display::-webkit-scrollbar-track,
 #bars::-webkit-scrollbar-track {
     background-color: #{$panelBackground};
 }
@@ -125,29 +125,29 @@ body {
 
 /* Handle */
 
-#display::-webkit-scrollbar-thumb,
+.display::-webkit-scrollbar-thumb,
 #bars::-webkit-scrollbar-thumb {
     background: #aaa;
     border: 1px solid #{$borderColor};
 }
 
-#display::-webkit-scrollbar-thumb:hover,
+.display::-webkit-scrollbar-thumb:hover,
 #bars::-webkit-scrollbar-thumb:hover {
     background: #e6e6e6;
 }
 
-#display::-webkit-scrollbar-thumb:active,
+.display::-webkit-scrollbar-thumb:active,
 #bars::-webkit-scrollbar-thumb:active {
     background: #848282;
 }
 
 
-#display::-webkit-scrollbar-thumb:window-inactive,
+.display::-webkit-scrollbar-thumb:window-inactive,
 #bars::-webkit-scrollbar-thumb:window-inactive {
     background: #888;
 }
 
-#display::-webkit-scrollbar-corner,
+.display::-webkit-scrollbar-corner,
 #bars::-webkit-scrollbar-corner {
     background-color: #{$panelBackground};
     border-top:1px solid #{$borderColor};
