fix Advanced editor button

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -714,7 +714,7 @@ body {
 
 /** button stats */
 
-#advedit {
+.advedit {
     top: 3px;
     right: 3px;
     text-align: center;
@@ -725,15 +725,15 @@ body {
     width: 16px;
 }
 
-#advedit .fa {
+.advedit .fa {
     margin-top: 1px;
 }
 
-#advedit:hover {
+.advedit:hover {
     background-color: #d70000;
 }
 
-#advedit:active {
+.advedit:active {
     background-color: #790000;
 }
 
