--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -733,7 +733,7 @@ body {
 
 /** button stats */
 
-#advedit {
+.advedit {
     right: 0px;
     top: 0px;
     height: 24px;
@@ -742,7 +742,7 @@ body {
     line-height: 22px;
 }
 
-#advedit .fa {
+.advedit .fa {
     margin-top: 3px;
     font-size: 18px;
 }
