--- a/src/css/monsters.scss
+++ b/src/css/monsters.scss
@@ -1,4 +1,54 @@
-$monsters :'./../../assets/monsters';
+$monsters: "./../../assets/monsters";
+
+/*
+.party-human {}
+
+.party-elf {}
+
+.party-dwarf, .party-blackdwarf {}
+
+.party-ogre {}
+*/
+.party-faerie {
+    background-image: url(#{$monsters}/Fairy60.png);
+    background-size: 32px 32px;
+}
+
+/*
+.party-gnoll {}
+
+.party-gnome {}
+*/
+.party-goblin {
+    background-image: url(#{$monsters}/Goblin60.png);
+    background-size: 32px 32px;
+}
+
+/*
+.party-half-elf {}
+
+.party-halfling {}
+
+.party-half-ogre {}
+
+.party-half-orc {}
+
+.party-hobbit {}
+
+.party-kobold {}
+
+.party-lizardfolk {}
+
+.party-nymph {}
+
+.party-orc {}
+
+.party-satyr {}
+
+.party-wildelf {}
+
+*/
+
 .monster-black-dragon {
     background-image: url(#{$monsters}/BlackDragon90.png);
     background-size: 32px 32px;
@@ -23,12 +73,13 @@ $monsters :'./../../assets/monsters';
 .monster-red-dragon {
     /*0.667 * width/height for 48 to 32*/
     background-image: url(#{$monsters}/32x32-6.png);
-    /*
-  background-position: -533.5px -117.5px;  
-  background-size: 661px 522px;
-  */
+
+  /*
+background-position: -533.5px -117.5px;  
+background-size: 661px 522px;
+*/
     background-position: -808px -184px;
-    animation: red-dragon-sprite .8s steps(2) infinite;
+    animation: monster-red-dragon-sprite 0.8s steps(2) infinite;
 }
 
 @keyframes monster-red-dragon-sprite {
@@ -37,13 +88,79 @@ $monsters :'./../../assets/monsters';
     }
 }
 
+.monster-kragg {
+    background-image: url(#{$monsters}/drake.png);
+    background-position: 0px 0px;
+    animation: monster-kragg-sprite 0.8s steps(2) infinite;
+}
+
+@keyframes monster-kragg-sprite {
+    100% {
+        background-position: 0px -64px;
+    }
+}
+
 .monster-alligator {
     background-image: url(#{$monsters}/32x32-5.PNG);
     background-position: -352px -800px;
 }
 
+.monster-dwarf, .monster-blackdwarf {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -352px -32px;
+}
+
+.monster-verres {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -448px -192px;
+}
 
 /*
+.monster-ogre, .monster-half-ogre {}
+*/
+.monster-orc, .monster-half-orc {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -544px -96px;
+}
+
+/*
+.monster-gnome {}
+*/
+.monster-goblin {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -544px -32px;
+}
+
+.monster-hobgoblin {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -544px -64px;
+}
+
+/*
+.monster-half-elf {}
+
+.monster-half-elf {}
+
+.monster-halfling {}
+*/
+.monster-hobbit {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -352px -32px;
+}
+
+/*
+.monster-gargoyle {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -352px -32px;
+}
+*/
+.monster-nymph {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -448px -608px;
+}
+/*
+.monster-wildelf {}
+
 .monster-amphibian {
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
@@ -100,6 +217,11 @@ $monsters :'./../../assets/monsters';
 }
 
 .monster-bug {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -640px -32px;
+}
+
+.monster-bugbear {
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
 }
@@ -193,7 +315,7 @@ $monsters :'./../../assets/monsters';
 .monster-dragon {
     background-image: url(#{$monsters}/32x32-6.png);
     background-position: -808px -184px;
-    animation: dragon-sprite .8s steps(2) infinite;
+    animation: dragon-sprite 0.8s steps(2) infinite;
 }
 
 @keyframes monster-dragon-sprite {
@@ -202,8 +324,12 @@ $monsters :'./../../assets/monsters';
     }
 }
 
-
 /*
+.monster-elf {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -640px -32px;
+}
+
 .monster-drake {
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
@@ -308,12 +434,16 @@ $monsters :'./../../assets/monsters';
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
 }
-
+*/
 .monster-kobold {
     background-image: url(#{$monsters}/32x32-2.PNG);
-    background-position: -640px -32px;
+    background-position: -448px -32px;
 }
-
+.monster-kobold.monster-cleric {
+    background-image: url(#{$monsters}/32x32-2.PNG);
+    background-position: -448px -128px;
+}
+/*
 .monster-large {
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
@@ -485,7 +615,6 @@ $monsters :'./../../assets/monsters';
     background-position: -640px -32px;
 }
 
-
 /*
 .monster-satyr {
     background-image: url(#{$monsters}/32x32-2.PNG);
@@ -566,12 +695,12 @@ $monsters :'./../../assets/monsters';
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
 }
-
+*/
 .monster-wolf {
     background-image: url(#{$monsters}/32x32-2.PNG);
-    background-position: -640px -32px;
+    background-position: -160px -608px;
 }
-
+/*
 .monster-wolverine {
     background-image: url(#{$monsters}/32x32-2.PNG);
     background-position: -640px -32px;
