--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -480,3 +480,18 @@ body {
 .dialog-footer .btn {
     margin: 5px;
 }
+
+.dialog-header {
+    background-color: #F5F5F5;
+    box-shadow: inset 0 -1px 0 #ddd;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    border-bottom: 1px solid #fff;
+}
+
+.dialog-header .btn {
+    margin: 5px;
+}
