--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -400,6 +400,10 @@ body {
     text-transform: uppercase;
 }
 
+.weapon-dominant {
+    border-color: red !important;
+}
+
 .weapon-large-sword {
     background-image: url(#{$images}/status/icon_sword_long2.png);
 }
