Add more standard menu items and toolbar buttons and fix issues with dockmanager tab strip z-indexes

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -39,6 +39,10 @@ body {
     margin-bottom: 0 !important;
 }
 
+#btn-add-dropdown {
+    min-width: auto !important;
+}
+
 .fa-file-pdf-o {
     color: #cc3e44 !important;
 }
