--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -96,47 +96,50 @@ body {
     border-top: 1px solid #ccc;
 }
 
-.editor.output {
-    bottom: 170px;
-}
-
-.output-container {
-    margin: 0;
-    position: absolute;
+.output {
+    bottom: 0;
     left: 0;
     right: 0;
-    height: 149px;
-    bottom: 0;
-    border-top: 1px solid #D3D3D3;
-    overflow: auto;
+    position: absolute;
+    height: 170px;
+    padding: 0px;
+    cursor: default;
+    display: none;
 }
 
-.output-container body {
-	border-top: 1px solid #D3D3D3;
+.output a {
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
-.output-container .error {
-	color: red;
-	text-decoration: none;
-	display: block;
-}
-
-.output-container .warning {
-	text-decoration: none;
-	color: #DDDD00;
-	display: block;
-}
-
-.output-container .error:hover, .output-container .warning:hover {
-	text-decoration: underline;
+#output-toolbar {
+    border-top: #ccc 1px solid;
+    border-bottom: #ccc 1px solid;
 }
 
 .output-display {
-    border-top: 1px solid #D3D3D3;
+    position: absolute;
+    top: 28px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: auto;
 }
 
-.statusbar.output {
-    bottom: 150px;
+.output .error {
+    color: red;
+    text-decoration: none;
+    display: block;
+}
+
+.output .warning {
+    text-decoration: none;
+    color: #DDDD00;
+    display: block;
+}
+
+.output .error:hover, .output .warning:hover {
+    text-decoration: underline;
 }
 
 .cm-tabpane-container {
@@ -198,4 +201,25 @@ body {
     border-color: rgb(247, 216, 106);
     opacity: 1;
     color: black;
+}
+
+#btm-drag-bar {
+    background-color: transparent;
+    height: 3px;
+    width: 100%;
+    cursor: row-resize;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 100;
+}
+
+#btm-ghost-bar {
+    height: 3px;
+    background-color: #000;
+    opacity: 0.5;
+    position: absolute;
+    cursor: row-resize;
+    z-index: 999;
 }
