--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -117,6 +117,12 @@ body {
     border-bottom: #ccc 1px solid;
 }
 
+#output-toolbar .close {
+    font-size: 15px;
+    float: right;
+    padding: 5px;
+}
+
 .output-display {
     position: absolute;
     top: 28px;
@@ -124,6 +130,7 @@ body {
     left: 0;
     right: 0;
     overflow: auto;
+    outline: none;
 }
 
 .output .error {
