Add dialog border styling

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -1,3 +1,8 @@
+dialog {
+    border: 1px solid black;
+    box-shadow: 3px 3px 5px #535353;
+}
+
 .dialog-header {
     background-color: #F5F5F5;
     box-shadow: inset 0 -1px 0 #ddd;
