--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -5,6 +5,7 @@ body {
     user-select: none;
     height: 100%;
     width: 100%;
+    background-color: grey;
 }
 
 .cm {
@@ -12,7 +13,7 @@ body {
 }
 
 .cm-tabpane {
-    background-color: window;
+    background-color: #f5f5f5;
 }
 
 .btn-toolbar {
