--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -260,3 +260,74 @@ body {
 dialog .close {
     outline: none !important;
 }
+
+.splash-mask {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    z-index: 9000;
+}
+
+.splash-screen {
+    display: block;
+    background-color: #e6e6e6;
+    color: black;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid black;
+    -webkit-box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
+    -moz-box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 23px rgba(0, 0, 0, 0.8);
+    margin: auto;
+    width: 368px;
+    height: 150px;
+    position: relative;
+    top: 50%;
+    transform: perspective(1px) translateY(-50%);
+}
+
+.splash-layout {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    z-index: 10000;
+    text-align: center;
+}
+
+.splash-screen h1, .splash-screen h3, .splash-screen h6 {
+    margin: 0px;
+}
+
+.splash-screen h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#splashProgress { 
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 4px;
+ }
+ 
+ #splashProgress::-webkit-progress-bar {
+      background-color: #eee;
+      border-radius: 4px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+ }
+
+#splashProgress[value]::-webkit-progress-value {
+      border-radius: 4px; 
+      background-color: #09c;
+  }
