--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -160,11 +160,23 @@ body {
     left: 0;
     right: 0;
     cursor: default;
+    height: 20px;
+    border-top: #ccc 1px solid;
 }
 
-.statusbar span, .statusbar div {
-    padding-left: 2px;
-    padding-right: 2px;
+.statusbar span.left, .statusbar div.left {
+    padding-left: 4px;
+    padding-right: 4px;
+    border-right: #ccc 1px solid;
+}
+
+.statusbar span.right, .statusbar div.left {
+    float: right;
+    padding-left: 4px;
+    padding-right: 4px;    
+    border-left: #ccc 1px solid;
+    border-right: #ccc 0px solid;
+    text-align: center;
 }
 
 .ace_status-indicator {
