--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -10,6 +10,7 @@ body {
 
 .cm {
     top: 26px !important;
+    bottom: 20px! important;
 }
 
 .cm-tabpane {
@@ -162,6 +163,7 @@ body {
     cursor: default;
     height: 20px;
     border-top: #ccc 1px solid;
+    background-color: rgb(245, 245, 245);
 }
 
 .statusbar span.left, .statusbar div.left {
