Code editor: add note on possible solution to text darkness

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -365,3 +365,8 @@ dialog .close {
 .monaco-editor .margin-view-overlays .current-line {
     background-color: rgba(0, 0, 0, 0.071);
 }
+
+/*
+cause test to be brighter but more bold looking
+-webkit-text-stroke: 0.2px;
+*/
