--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -32,31 +32,59 @@ body {
     margin-bottom: 0 !important;
 }
 
-#btn-add-dropdown {
+.btn-toolbar .label {
+    float: left;
+    color: black;
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+}
+
+#btn-add-dropdown, .btn-caret {
     min-width: auto !important;
 }
 
-.fa-file-pdf-o {
+#editor-buttons > .btn, #editor-buttons > .btn-group, #editor-buttons > .input-group {
+    margin-left: 5px;
+}
+
+.btn-toolbar input {
+    width: auto;
+    display: inline-block;
+}
+
+.cm-tabstrip .fa-file-pdf-o {
     color: #cc3e44 !important;
 }
 
-.fa-file-excel-o {
+.cm-tabstrip .fa-file-excel-o {
     color: #8dc149 !important;
 }
 
-.fa-file-word-o {
+.cm-tabstrip .fa-file-word-o {
     color: #519aba !important;
 }
 
-.fa-file-image-o {
+.cm-tabstrip .fa-file-image-o {
     color: #a074c4 !important;
 }
 
-.fa-file-video-o {
+.cm-tabstrip .fa-file-video-o {
     color: #f55385 !important;
 }
 
-.fa-file-archive-o {
+.cm-tabstrip .fa-file-archive-o {
     color: #6d8086 !important;
 }
 
@@ -72,7 +100,7 @@ body {
     color: #519aba !important;
 }
 
-.fa-map-o {
+.cm-tabstrip .fa-map-o {
     color: #8dc149 !important;
 }
 
@@ -160,8 +188,13 @@ body {
     padding-right: 6px;
 }
 
+.statusbar span.center {
+    float: left;
+}
+
 .statusbar span.left, .statusbar div.left {
     border-right: #ccc 1px solid;
+    float: left;
 }
 
 .statusbar span.right, .statusbar div.left {
@@ -195,6 +228,10 @@ body {
 .cm-tabpane-container {
     background-color: grey;
     bottom: 1px;
+}
+
+.cm-tabpane {
+    background-color: #f5f5f5;
 }
 
 .cm-tabstrip li {
@@ -256,6 +293,36 @@ body {
     position: absolute;
     cursor: row-resize;
     z-index: 999;
+}
+
+.splitter {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.splitter-panel {
+    position: absolute;
+    background-color: #f5f5f5;
+}
+
+.spitter-drag-bar {
+    background-color: transparent;
+    position: absolute;
+    z-index: 100;
+    background-color: #f5f5f5;
+    outline: none;
+}
+
+.splitter-ghost-bar {
+    background-color: #000;
+    opacity: 0.5;
+    position: absolute;
+    z-index: 999;
+    outline: none;
 }
 
 .form-control-feedback,
@@ -366,7 +433,325 @@ dialog .close {
     background-color: rgba(0, 0, 0, 0.071);
 }
 
+.editor-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
 /*
 cause test to be brighter but more bold looking
 -webkit-text-stroke: 0.2px;
+*/
+
+.map {
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    position: absolute;
+    background-color: #f5f5f5;
+    overflow: hidden;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+
+.x-axis {
+    overflow: hidden;
+    box-sizing: border-box;
+    background-color: white;
+    height: 32px;
+    position: absolute;
+    top: 0;
+    left: 32px;
+    border-bottom: 1px black solid;
+    z-index: 1;
+    right: 0;
+}
+
+.x-axis div {
+    height: 32px;
+    width: 32px;
+    display: inline-block;
+    text-align: center;
+    color: red;
+    padding-top: 14px;
+    font-size: 8pt;
+    cursor: default;
+}
+
+.y-axis {
+    overflow: hidden;
+    box-sizing: border-box;
+    background-color: white;
+    width: 32px;
+    position: absolute;
+    top: 32px;
+    bottom: 0;
+    left: 0;
+    border-right: 1px black solid;
+    z-index: 1;
+}
+
+.y-axis div {
+    height: 32px;
+    width: 28px;
+    float: left;
+    text-align: right;
+    padding-top: 8px;
+    color: blue;
+    font-size: 8pt;
+    box-sizing: border-box;
+    cursor: default;
+}
+
+.c-axis {
+    overflow: hidden;
+    box-sizing: border-box;
+    background-color: white;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.map-container {
+    box-sizing: border-box;
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    bottom: 0;
+    overflow: auto;
+    background-color: white;
+    right: 0;
+}
+
+.x-axis-highlight {
+    display: none;
+    width: 32px;
+    top: 0px;
+    box-sizing: border-box;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    z-index: 100;
+}
+
+.y-axis-highlight {
+    display: none;
+    height: 32px;
+    top: 0px;
+    box-sizing: border-box;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    z-index: 100;
+}
+
+.map-canvas {
+    image-rendering: optimizeSpeed;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    outline: none;
+}
+
+.room-item {
+    text-decoration: underline;
+    color: white;
+}
+
+.room-short {
+    width: 100%;
+    color: rgb(128, 0, 128);
+}
+
+.room-long {
+    width: 100%;
+    color: rgb(192, 192, 192);
+}
+
+.room-smell {
+    width: 100%;
+    color: rgb(200, 120, 0);
+}
+
+.room-sound {
+    width: 100%;
+    color: rgb(0, 128, 128);
+}
+
+.room-exits {
+    width: 100%;
+    color: rgb(0, 128, 0);
+}
+
+.raw {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 27px;
+    position: absolute;
+    display: none;
+    width: 100%;
+    resize: none;
+    white-space: nowrap;
+    border: 0;
+    outline: none;
+}
+
+.virtual-editor-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 26px;
+    font-weight: bold;
+    font-size: 18px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding-left: 5px;
+}
+
+.room-preview {
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    position: absolute;
+    left: 0px;
+    bottom: 0;
+    right: 0;
+    top: 0px;
+    z-index: 20;
+    overflow: auto;
+    background-color: black;
+    padding: 0px;
+    margin: 0px;
+    user-select: initial;
+}
+
+.property-grid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    padding: 0;
+    border: 1px solid #ccc;
+    margin: 0;
+    cursor: default;
+    background-color: white;
+    outline: none;
+}
+
+.property-grid-group {
+    background-color: rgb(244, 247, 252);
+    list-style-type: none;
+    border-bottom: 1px solid rgb(240,240,240);
+    padding-left: 20px;
+}
+
+.property-grid-group-label {
+    font-weight: bold;
+    padding-left: 2px;
+}
+
+.property-grid-item {
+    background-color: rgb(255, 255, 255);
+    list-style-type: none;
+    border-bottom: 1px solid rgb(244, 247, 252);
+    position: relative;
+}
+
+.property-grid-item-label {
+    background-color: rgb(255, 255, 255);
+    border-right: 1px solid rgb(244,247,252);
+    display:inline-block;  
+    width: 100px;
+    padding-left: 2px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.property-grid-item-value {
+    background-color: rgb(255, 255, 255);
+    display:inline-block;
+    padding-left: 2px;
+    position: absolute;
+    right: 0;
+    left: 100px;    
+    white-space: nowrap;
+    text-overflow: ellipsis;    
+    overflow: hidden;
+    bottom: 0;
+    top: 0;
+}
+
+.property-grid-item-value.readonly {
+    background-color: #fafafa;
+    color: silver;
+}
+
+.property-grid-group-items {
+    padding-left: 0px;
+}
+
+.property-grid-collapse.fa-chevron-down {
+    float: left;
+    margin-left: -18px;
+    margin-top: 1px;
+}
+
+.property-grid-collapse.fa-chevron-right {
+    float: left;
+    margin-left: -15px;
+    margin-top: 3px;
+}
+
+.property-grid-editor {
+    right: 0;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    position: absolute;    
+    border: 0px;
+    padding-left: 2px;
+    width: 100%;
+}
+
+.property-grid .flag-editor
+{ 
+    right: 0;
+    bottom: 0;
+    top: 0;
+    position: absolute;    
+    border: 0px;
+    outline: none;
+    padding: 0;
+    width: 18px;
+}
+
+.flag-editor-dropdown {
+    position: absolute;
+    background-color: white;
+    border: 1px solid black;
+    white-space: nowrap;
+    z-index: 1000000;
+    overflow: auto;
+    outline: none;
+}
+.flag-editor-dropdown label {
+    width: 100%;
+    display: block;
+}
+/*
+input[type='checkbox'].property-grid-editor {
+}
 */
