--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -8,6 +8,10 @@ body {
     background-color: grey;
 }
 
+::placeholder {
+    opacity: 0.5;
+}
+
 .btn-toolbar {
     background-color: rgb(245, 245, 245);
     margin-left: 0px !important;
@@ -641,20 +645,21 @@ cause test to be brighter but more bold looking
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    bottom: 2px;
+    right: 2px;
     padding: 0;
     border: 1px solid #ccc;
     margin: 0;
     cursor: default;
     background-color: white;
     outline: none;
+    overflow: hidden;
 }
 
 .property-grid-group {
     background-color: rgb(244, 247, 252);
     list-style-type: none;
-    border-bottom: 1px solid rgb(240,240,240);
+    border-bottom: 1px solid rgb(240, 240, 240);
     padding-left: 20px;
 }
 
@@ -672,8 +677,8 @@ cause test to be brighter but more bold looking
 
 .property-grid-item-label {
     background-color: rgb(255, 255, 255);
-    border-right: 1px solid rgb(244,247,252);
-    display:inline-block;  
+    border-right: 1px solid rgb(244, 247, 252);
+    display: inline-block;
     width: 100px;
     padding-left: 2px;
     white-space: nowrap;
@@ -682,13 +687,13 @@ cause test to be brighter but more bold looking
 
 .property-grid-item-value {
     background-color: rgb(255, 255, 255);
-    display:inline-block;
+    display: inline-block;
     padding-left: 2px;
     position: absolute;
     right: 0;
-    left: 100px;    
+    left: 100px;
     white-space: nowrap;
-    text-overflow: ellipsis;    
+    text-overflow: ellipsis;
     overflow: hidden;
     bottom: 0;
     top: 0;
@@ -720,22 +725,74 @@ cause test to be brighter but more bold looking
     bottom: 0;
     top: 0;
     left: 0;
-    position: absolute;    
+    position: absolute;
     border: 0px;
     padding-left: 2px;
     width: 100%;
+    background-color: white;
 }
 
-.property-grid .flag-editor
-{ 
-    right: 0;
-    bottom: 0;
-    top: 0;
-    position: absolute;    
+.property-grid-editor input[type=checkbox], input[type=checkbox].property-grid-editor {
+    width: auto;
+}
+
+.property-grid-editor-mulitline textarea {
     border: 0px;
     outline: none;
     padding: 0;
+    padding-left: 1px;
+    padding-right: 1px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.property-grid-editor-mulitline {
+    border: 1px solid #f2cb7f;
+    right: -1px;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+
+    /*height: 40px;*/
+    z-index: 100;
+    overflow: hidden;
+    background-color: white;
+}
+
+.property-grid-editor-multiline-container {
+    right: 19px;
+    position: absolute;
+    top: -1px;
+    left: 0;
+    bottom: 0;
+}
+
+.property-grid-editor-mulitline button {
     width: 18px;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    position: absolute;
+    border: 0px;
+    padding: 0;
+    text-align: center;
+    outline: none;
+}
+
+.property-grid .flag-editor {
+    right: 0;
+    bottom: 0;
+    top: 0;
+    position: absolute;
+    border: 0px;
+    outline: none;
+    padding: 0;
+    width: 16px;
 }
 
 .flag-editor-dropdown {
@@ -747,10 +804,12 @@ cause test to be brighter but more bold looking
     overflow: auto;
     outline: none;
 }
+
 .flag-editor-dropdown label {
     width: 100%;
     display: block;
 }
+
 /*
 input[type='checkbox'].property-grid-editor {
 }
